minor alignment fix

--- a/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
@@ -2,7 +2,7 @@
 
 .woocommerce-marketplace {
 	&__notice {
-		align-items: flex-start;
+		align-items: center;
 		border: 1px solid #F0F0F0;
 		box-shadow: 0px 2px 6px 0px #0000000D;
 		display: flex;
@@ -29,7 +29,9 @@
 		}
 
 		&-icon {
-			margin-top: -3px;
+			align-self: flex-start;
+			margin-top: 3px;
+
 			&.icon-color-info {
 				fill: var(--wp-admin-theme-color, #007cba);
 			}
